Uploaded revised books 130 and 131

--- a/html/book/130.html
+++ b/html/book/130.html
@@ -12,15 +12,15 @@ $author = '倪匡';
 $title = '頭髮'; 
 $book = 'E130';
 ShowBookTitle() ;
-ShowUpdbDownload('2011/4/29 (272K) 2015/1/2');
-ShowPdbDownload('2002/10/5 (264K) 2015/1/2');
-ShowPrcDownload('2011/4/29 (258K) 2015/1/2');
-ShowEpubDownload('2011/4/29 (178K) 2015/1/2');
-ShowVEpubDownload('2013/7/19 (178K) 2015/1/2');
+ShowUpdbDownload('2024/11/28 (272K) 2015/1/2 2011/4/29');
+ShowPdbDownload('2015/1/2 (264K) 2002/10/5');
+ShowPrcDownload('2015/1/2 (258K) 2011/4/29');
+ShowEpubDownload('2024/11/28 (178K) 2015/1/2 2011/4/29');
+ShowVEpubDownload('2024/11/28 (178K) 2015/1/2 2013/7/19');
 BookSectionEnd();
 ?>
 <img src="covers/130.jpg" HSPACE=8 align=right>
-倪匡之衛斯理系列之 37。感謝YSG、謝易勳、sean lee、Stephen Tsang、Joy、Lin Lee、明月清風、A Yung勘誤。感謝chin223提供掃描檔。感謝A Yung、MilkyWayian勘誤。<br>
+倪匡之衛斯理系列之 37。感謝chin223提供掃描檔。感謝YSG、謝易勳、sean lee、Stephen Tsang、Joy、Lin Lee、明月清風、A Yung、MilkyWayian、Henry勘誤。<br>
 <br>
 〈頭髮〉寫於一九七八年，是倪匡在休息了六年之後又開始續寫的第一個故事。具有相當特殊的意義，在衛斯理故事中，地位獨特。〈頭髮〉亦名《無名髮》原在明報發表，後來被改為《無名髮》，有「無以名之」之感。<br>
 <br>
@@ -33,7 +33,39 @@ BookSectionEnd();
 釋迦牟尼、耶穌、默罕默德、老子，都是從同一個星球來拯救我們的。真的是如此嗎？<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(Henry 2024/11/28)<br>
+──/……（多處）<br>
+人家叫你的事/人家託你的事<br>
+只不過在前年前/只不過在六年前<br>
+用手撥開浮土的時間/用手撥開浮土的時候<br>
+一雙銀鐲子/一隻銀鐲子<br>
+這雙銀鐲子/這隻銀鐲子<br>
+我一轉身來/我一轉過身來<br>
+一個世界著名大學/一家世界著名大學<br>
+一幅新衣/一幅襯衣<br>
+我推開了手/我攤開了手<br>
+遣成/遣戍 （多處）<br>
+在大海飄浮/在大海漂浮<br>
+機塲上落降/機塲上降落<br>
+畫出了禁地/劃出了禁地<br>
+向山直衝了下去/向山下直衝了下去<br>
+絕不在在/絕不在<br>
+他自然而想到/他自然而然想到<br>
+能讀我的名字/能讀出我的名字<br>
+只是我們掌握了這一點/只要我們掌握了這一點<br>
+在下剷著水泥/在向下剷著水泥<br>
+說不出所然/說不出所以然<br>
+究竟多少人明白/究竟有多少人明白<br>
+偶然抬起頭/惘然抬起頭<br>
+同樣用鑰匙打開了進入第二層石室之門/同樣用鑰匙打開了進入第五層石室之門<br>
+我看了暗門中/我看到了暗門中<br>
+雖在奇幻莫測/雖然奇幻莫測<br>
+就是自他的頭髮/就來自他的頭髮<br>
+人形凹模/人形凹槽<br>
+帶我會見他/帶我去見他<br>
+可是剛才說/可是你剛才說<br>
+<br>
 (MilkyWayian 2015/1/2)<br>
 雖在一起住宿/雖然一起住宿<br>
 無法確切他講出/無法確切地講出<br>
