--- a/html/book/131.html
+++ b/html/book/131.html
@@ -12,20 +12,42 @@ $author = '倪匡';
 $title = '眼睛'; 
 $book = 'E131';
 ShowBookTitle() ;
-ShowUpdbDownload('2011/4/29 (213K) 2014/5/2');
+ShowUpdbDownload('2024/11/28 (213K) 2014/5/2 2011/4/29');
 ShowPdbDownload('2002/10/5 (206K) 2014/5/2');
 ShowPrcDownload('2011/4/29 (200K) 2014/5/2');
-ShowEpubDownload('2011/4/29 (136K) 2014/5/2');
-ShowVEpubDownload('2013/11/8 (136K) 2014/5/2');
+ShowEpubDownload('2024/11/28 (136K) 2014/5/2 2011/4/29');
+ShowVEpubDownload('2024/11/28 (136K) 2014/5/2 2013/11/8');
 BookSectionEnd();
 ?>
 <img src="covers/131.jpg" HSPACE=8 align=right>
-倪匡之衛斯理系列之 38。感謝MisTvAn、sean lee、小萌、Lin Lee、明月清風勘誤。感謝chin223提供掃描檔。<br>
+倪匡之衛斯理系列之 38。感謝chin223提供掃描檔。感謝MisTvAn、sean lee、小萌、Lin Lee、明月清風、Henry勘誤。<br>
 <br>
 非洲某個小國有三分之二的國境是位於維奇奇山脈，傳說中維奇奇山是由維奇奇大神創造的，而「維奇奇」在土語中是「一隻眼睛」的意思，然而衛斯理卻發現這個獨眼大神原來是……<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(Henry 2024/11/28)<br>
+──/…… （多處）<br>
+接到了一四四的電話/接到了一四四小組的電話<br>
+其餘的人全部死了。/其餘的人，全都死了。<br>
+告訴我這四個音節/告訴我的這四個音節<br>
+已經思索這個問題/已經思索過這個問題<br>
+推開作了個手勢/推開，作了個手勢<br>
+未被採出來之中/未被採出來之前<br>
+發生了一次之後不再發生了/發生了一次之後，就不再發生了<br>
+拿起了一件東西時/拿起了一件東西來<br>
+普遍人/普通人<br>
+隱暗的樓梯/陰暗的樓梯<br>
+從門口來進去/從門口走進去<br>
+只有根富肯講/只要根富肯講<br>
+從來未曾也在/從來也未曾在<br>
+某一宗教儀式/某一種宗教儀式<br>
+可以達某一個目的地/可以到達某一個目的地<br>
+又會有甚麼的情形/又會有甚麼樣的情形<br>
+連邪惡的念頭未曾起過/連邪惡的念頭都未曾起過<br>
+當時一定會有過/當時一定曾有過<br>
+策畫/策劃<br>
+<br>
 (明月清風 2014/5/2)<br>
 十七小遍/十七八遍<br>
 遮了起。/遮了起來。<br>
