Uploaded revised book 17K2

--- a/html/book/17K2.html
+++ b/html/book/17K2.html
@@ -12,21 +12,102 @@ $title = '中國歷代政治得失';
 $book = 'C17K2';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/21 (191K) 2017/9/1');
+ShowUpdbDownload('2024/12/3 (191K) 2023/3/21 2017/9/1');
 ShowPrcDownload('2017/9/1 (196K)');
 ShowMobiDownload('2017/9/1 (555K)');
-ShowEpubDownload('2023/3/21 (133K) 2017/9/1');
-ShowVEpubDownload('2023/3/21 (133K) 2017/9/1');
+ShowEpubDownload('2024/12/3 (133K) 2023/3/21 2017/9/1');
+ShowVEpubDownload('2024/12/3 (133K) 2023/3/21 2017/9/1');
 BookSectionEnd();
 ?>
 <img src="covers/17K2.jpg" hspace=8 align=right>
-好讀書櫃《典藏版》，感謝嘉明參照掃描檔整理校正過。感謝doomsday提供掃描檔。感謝WXH/IT勘誤。<br><br>
+好讀書櫃《典藏版》，感謝嘉明參照掃描檔整理校正過。感謝doomsday提供掃描檔。感謝WXH/IT、Jack勘誤。<br><br>
 <b>錢穆《中國歷代政治得失》提要</b> (錄自<a href="http://http://baike.baidu.com/item/%E4%B8%AD%E5%9B%BD%E5%8E%86%E4%BB%A3%E6%94%BF%E6%B2%BB%E5%BE%97%E5%A4%B1" target=_blank>百度百科</a>)<br>
 <br>
 本書為作者的專題演講合集，分別就中國漢、唐、宋、明、清五代的政府組織、百官職權、考試監察、財經賦稅、兵役義務等種種政治制度作了提要鉤玄的概觀與比照，敍述因革演變，指陳利害得失。既高屋建瓴地總括了中國歷史與政治的精要大義，又點明了近現代國人對傳統文化和精神的種種誤解。言簡意賅，語重心長，實不失為一部簡明的「中國政治制度史」。<br>
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(Jack 2024/12/3)<br>
+修訂說明<br>
+<br>錢先生此書最早在一九五五年於香港出版，直至一九七七年方由東大圖書公司在台印行。此書為歷年研史者所重，多年長銷，已歷五版；並收入︽錢賓四先生全集︾中。<br>
+︽好讀︾在二零一七年上架的版本有不少錯誤，且版式、分段皆不理想，而且不是根據臺版製作，而是從大陸簡體電子版轉換而來，證據是：<br>
+一、其中許多錯別字，如﹁不干﹂、﹁若干﹂變成﹁不幹﹂、﹁若幹﹂等等，顯是由簡體轉繁體時的錯誤。<br>
+二、錢先生原書中有若干舉中央政府及臺灣省政府為例或批評共產黨的部分，皆遭刪改。<br>
+現按︽錢賓四先生全集︾裡的版本修訂校正，此版由弟子門生重新排版，分段更為合理易讀。<br>
+錢先生為現代大儒，此書更為其對政治歷史提綱挈領之作，故在此提供修訂版，以饗︽好讀︾讀者。<br>
+<br>
+大府/大夫<br>
+不過市/不過是<br>
+辟屬/辟署<br>
+盡多/儘多<br>
+旬悅/荀悅<br>
+徵收/征收<br>
+曰徵者/曰征者<br>
+徵伐/征伐<br>
+少府的經濟/少府的金錢<br>
+白己/自己<br>
+不幹奴隸/不干奴隸<br>
+情形不便/情形不變<br>
+許可權/權限<br>
+進城/儘成<br>
+此等是/此等事<br>
+若幹/若干<br>
+長胃/長官<br>
+# 猶如此刻......令其為大中正。<br>
+儀錶/儀表<br>
+現行通行/現代通行<br>
+此為選舉/次為「選舉」<br>
+之徵/之征<br>
+並在兩稅/併在兩稅<br>
+今娼/今絹<br>
+假今官雜/假令官雜<br>
+總說漢代/縱說漢代<br>
+也許軍人/也須軍人<br>
+自立生產/自力生產<br>
+最勘/最堪<br>
+該有可願/該有可原<br>
+只親攬了/只親覽了<br>
+不做聲/不作聲<br>
+御劄/御札<br>
+自可願/自可原<br>
+只要到/直要到<br>
+「灌」/「漕」<br>
+詳復/詳覆<br>
+財富厚/財力富厚<br>
+平曰/平日<br>
+# 「譬如臺灣省政府征收農田米穀」被改成「譬如臺灣徵入」<br>
+徵發/征發<br>
+劃並/劃併<br>
+員警/警察<br>
+是一家/使一家<br>
+沒有天地/沒有田地<br>
+一般長期/一段長期<br>
+宋代弱能/宋代若能<br>
+詔諫行使/詔敕行使<br>
+廷轉/廷鞫<br>
+這條自/這條子<br>
+拋得過/拗得過<br>
+佈政使/布政使<br>
+科學場/科舉場<br>
+更可向/更可想<br>
+開袴/開衩<br>
+隻算/只算<br>
+私心處罰/私心出發<br>
+# 以下缺補上<br>
+# 好像向行政院長呈報的公事，行政院秘書處不能說也要<br>
+# 人家報一份，或者向總統呈報的公事，文官處也不該要<br>
+# 人家單獨報一份。<br>
+#<br>
+# 「有人」改回成「此刻中國共產黨」<br>
+攤運入/攤派入<br>
+免疫錢/免役錢<br>
+服服貼貼/服服帖帖<br>
+屢僕屢興/屢仆屢興<br>
+# 補上<br>
+# 今天中國的共產黨，便是其最極端的例．<br>
+#<br>
+# 另分段,標點,小漏字多處,不一一詳列<br>
+#<br>
 (WXH/IT 2023/03/21)<br>
 政府的權，總是逐步將/政府的權，總是逐步降<br>
 <br>
