Updated category for book 1010490534

--- a/html/book/17K2.html
+++ b/html/book/17K2.html
@@ -28,13 +28,13 @@ BookSectionEnd();
 <font size=2>
 <strong>勘誤表：</strong><br>
 (Jack 2024/12/3)<br>
-修訂說明<br>
-<br>錢先生此書最早在一九五五年於香港出版，直至一九七七年方由東大圖書公司在台印行。此書為歷年研史者所重，多年長銷，已歷五版；並收入︽錢賓四先生全集︾中。<br>
-︽好讀︾在二零一七年上架的版本有不少錯誤，且版式、分段皆不理想，而且不是根據臺版製作，而是從大陸簡體電子版轉換而來，證據是：<br>
-一、其中許多錯別字，如﹁不干﹂、﹁若干﹂變成﹁不幹﹂、﹁若幹﹂等等，顯是由簡體轉繁體時的錯誤。<br>
+修訂說明：<br>
+錢先生此書最早在一九五五年於香港出版，直至一九七七年方由東大圖書公司在台印行。此書為歷年研史者所重，多年長銷，已歷五版；並收入《錢賓四先生全集》中。<br>
+《好讀》在二零一七年上架的版本有不少錯誤，且版式、分段皆不理想，而且不是根據臺版製作，而是從大陸簡體電子版轉換而來，證據是：<br>
+一、其中許多錯別字，如「不干」、「若干」變成「不幹」、「若幹」等等，顯是由簡體轉繁體時的錯誤。<br>
 二、錢先生原書中有若干舉中央政府及臺灣省政府為例或批評共產黨的部分，皆遭刪改。<br>
-現按︽錢賓四先生全集︾裡的版本修訂校正，此版由弟子門生重新排版，分段更為合理易讀。<br>
-錢先生為現代大儒，此書更為其對政治歷史提綱挈領之作，故在此提供修訂版，以饗︽好讀︾讀者。<br>
+現按《錢賓四先生全集》裡的版本修訂校正，此版由弟子門生重新排版，分段更為合理易讀。<br>
+錢先生為現代大儒，此書更為其對政治歷史提綱挈領之作，故在此提供修訂版，以饗《好讀》讀者。<br>
 <br>
 大府/大夫<br>
 不過市/不過是<br>
