--- a/html/Share/1010490534.html
+++ b/html/Share/1010490534.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("趙之楚【二十一世紀的當家思想：論語】");
-SetLink('<a href="?M=hd&P=fiction-7"> 小說園地 書目</a>');
+SetLink('<a href="?M=hd&P=wisdom-6"> 隨身智囊 書目</a>');
 </script>
 <style>
     .center {
