Re-categorized 1010490443, 1010490444, and 1010490445

--- a/html/Share/1010490443.html
+++ b/html/Share/1010490443.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("雪麗．湯瑪斯【元素三部曲Ⅰ：燃燒的天空】");
-SetLink('<a href="?M=hd&P=mystery-1">懸疑小說 書目</a>');
+SetLink('<a href="?M=hd&P=scifi-10">奇幻小說 書目</a>');
 </script>
 
 
