--- a/html/Share/1010490287.html
+++ b/html/Share/1010490287.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("趙寧【談笑風生趙茶房】");
-SetLink('<a href="?M=hd&P=fiction-7">小說園地 書目</a>');
+SetLink('<a href="?M=hd&P=wisdom-6">隨身智囊 書目</a>');
 </script>
 
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
