--- a/html/Share/1010490314.html
+++ b/html/Share/1010490314.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("黃仁宇【地北天南敘古今】");
-SetLink('<a href="?M=hd&P=fiction-7">小說園地 書目</a>');
+SetLink('<a href="?M=hd&P=history-1">歷史煙雲 書目</a>');
 </script>
 
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
