--- a/html/Share/1010490424.html
+++ b/html/Share/1010490424.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("龔鵬程【歷史中的一盞燈】");
-SetLink('<a href="?M=hd&P=fiction-7">小說園地 書目</a>');
+SetLink('<a href="?M=hd&P=wisdom-6">隨身智囊 書目</a>');
 </script>
 
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
