Re-categorized 1010490448, 1010490479, 1010490505, 1010490514, and 1010490562

--- a/html/Share/1010490448.html
+++ b/html/Share/1010490448.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("達琳．史威勒博士、羅恩．史托伯格博士【別急著給糖吃，先教孩子思考：在科技時代，培養孩子獨立思考與積極行動力】");
-SetLink('<a href="?M=hd&P=fiction-7">小說園地 書目</a>');
+SetLink('<a href="?M=hd&P=wisdom-6">隨身智囊 書目</a>');
 </script>
 
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
