--- a/html/Share/1010490479.html
+++ b/html/Share/1010490479.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("壽岳章子【千年繁華二：喜樂京都】");
-SetLink('<a href="?M=hd&P=fiction-7"> 小說園地 書目</a>');
+SetLink('<a href="?M=hd&P=history-3"> 歷史煙雲 書目</a>');
 </script>
 <style>
     .center {
