--- a/html/Share/1010490505.html
+++ b/html/Share/1010490505.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("舒國治【理想的下午：關於旅行也關於晃蕩】");
-SetLink('<a href="?M=hd&P=fiction-7"> 小說園地 書目</a>');
+SetLink('<a href="?M=hd&P=wisdom-6"> 隨身智囊 書目</a>');
 </script>
 <style>
     .center {
