--- a/html/book/audioAB013.html
+++ b/html/book/audioAB013.html
@@ -8,6 +8,7 @@ require_once('player.php');
 <?php
 
 PlayMP3('AB013-01', '第一章《龍王棺》劉小珍錄音 2025/4/26');
+PlayMP3('AB013-02', '第二章《食狩村》劉小珍錄音 2025/5/3');
 
 ?>
 
