--- a/html/Share/1010490590.html
+++ b/html/Share/1010490590.html
@@ -20,14 +20,14 @@ $book = 'P1010490590';
 BookSectionBegin();
 #ShowBookTitleOnly();
 ShowBookTitle();
-ShowUpdbDownload('2025/3/7');
-ShowEpubDownload('2025/3/7');
-ShowVEpubDownload('2025/3/7');
+ShowUpdbDownload('2025/5/14 2025/3/7');
+ShowEpubDownload('2025/5/14 2025/3/7');
+ShowVEpubDownload('2025/5/14 2025/3/7');
 BookSectionEnd();
 ?>
 <div class="covers"><img src="covers/1010490590.jpg" HSPACE=8 align=right></div>
 
-好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔，感謝Wen Yu/sue1289校正。<br>
 <br>
 <br>
 <strong>本書簡介：</strong><br>
@@ -72,5 +72,19 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+（Wen Yu / sue1289　2025/5/14）<br>
+令人羨/令人羨慕(依原書改為令人艷羨)<br>
+奈姆/奈媞<br>
+千層類/千層麵<br>
+奈妮/奈媞<br>
+高你/問你<br>
+挤不出/擠不出<br>
+糾的/糾纏的(原書有誤)<br>
+雷金那那/雷金那(未改，原書如此)<br>
+老是要/老是耍<br>
+悲永遠/痣永遠<br>
+採躒場/採礫塲(未改，塲為場的異體字)<br>
+在士頓/在波士頓<br>
+瞥長/警長<br>
 </font>
 </td></tr></table>
