Uploaded metadata for 1010490670 thru 1010490679

--- a/html/Share/1010490364.html
+++ b/html/Share/1010490364.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("魯金【中國民間之羅漢小史】");
-SetLink('<a href="?M=hd&P=fiction-7">小說園地 書目</a>');
+SetLink('<a href="?M=hd&P=history-3">歷史煙雲 書目</a>');
 </script>
 
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
