--- a/html/Share/1010490666.html
+++ b/html/Share/1010490666.html
@@ -27,7 +27,7 @@ BookSectionEnd();
 ?>
 <div class="covers"><img src="covers/1010490666.jpg" HSPACE=8 align=right></div>
 
-好讀書櫃【典藏版】，感謝Jack整理製作，感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝L8879整理製作，感謝chin223提供掃瞄檔。<br>
 <br>
 <br>
 <strong>本書簡介：</strong><br>
