Uploaded meta data for 1010490680 thru 1010490689

--- a/html/Share/1010490679.html
+++ b/html/Share/1010490679.html
@@ -21,10 +21,11 @@ BookSectionBegin();
 #ShowBookTitleOnly();
 ShowBookTitle();
 ShowUpdbDownload('2025/5/29');
-ShowEpubDownload('2025/5/29');
-ShowVEpubDownload('2025/5/29');
+# ShowEpubDownload('2025/5/29');
+# ShowVEpubDownload('2025/5/29');
 BookSectionEnd();
 ?>
+<button onclick="window.location.href='https://haodoo.org/?product=1010490679'">從好讀二代下載 EPUB 檔</button> 2025/5/29<br><br>
 <div class="covers"><img src="covers/1010490679.jpg" HSPACE=8 align=right></div>
 
 好讀書櫃【典藏版】，感謝Carol整理製作，感謝chin223提供掃瞄檔。<br>
