--- a/html/book/audioAB013.html
+++ b/html/book/audioAB013.html
@@ -10,6 +10,7 @@ require_once('player.php');
 PlayMP3('AB013-01', '第一章《龍王棺》劉小珍錄音 2025/4/26');
 PlayMP3('AB013-02', '第二章《食狩村》劉小珍錄音 2025/5/3');
 PlayMP3('AB013-03', '第三章《饕餮銜首金簪》劉小珍錄音 2025/5/17');
+PlayMP3('AB013-04', '第四章《懸豬記》劉小珍錄音 2025/5/24');
 
 ?>
 
