Uploaded books, covers, and metadata for 1010490700 thru 1010490709

--- a/html/Share/1010490690.html
+++ b/html/Share/1010490690.html
@@ -42,14 +42,13 @@ BookSectionEnd();
 （製作讀友按：本電子書檔不含插圖，誠邀讀者參閱原書，欣賞村上陽子女士的美麗攝影作品。）<br>
 <br>
 附圖一<br>
-<img src="covers/1010490690a.jpg">
+<img src="covers/1010490690a.jpg"><br><br>
 附圖二<br>
-<img src="covers/1010490690b.jpg">
+<img src="covers/1010490690b.jpg"><br><br>
 附圖三<br>
-<img src="covers/1010490690c.jpg">
+<img src="covers/1010490690c.jpg"><br><br>
 附圖四<br>
-<img src="covers/1010490690d.jpg">
-<br>
+<img src="covers/1010490690d.jpg"><br><br>
 <br>
 <br>
 <strong>作者簡介：</strong><br>
