Uploaded metadata for 1010490710 thru 1010490719

--- a/html/Share/1010490657.html
+++ b/html/Share/1010490657.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("張文達【約伯大夢】");
+SetTitle("張文達【張文達的歲月情懷】");
 SetLink('<a href="?M=hd&P=wisdom-6">隨身智囊 書目</a>');
 </script>
 <style>
@@ -15,7 +15,7 @@ SetLink('<a href="?M=hd&P=wisdom-6">隨身智囊 書目</a>');
 <?php
 require_once('show-book.php');
 $author = '張文達';
-$title = '約伯大夢';
+$title = '張文達的歲月情懷';
 $book = 'P1010490657';
 BookSectionBegin();
 ShowBookTitleOnly();
