Uploaded audiobook AB007 part 35 and revised book 1010490149

--- a/html/Share/1010490149.html
+++ b/html/Share/1010490149.html
@@ -12,13 +12,13 @@ $title = '前朝夢憶：張岱的浮華與蒼涼';
 $book = 'P1010490149';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/6/1 2023/5/17');
-ShowEpubDownload('2023/6/1 2023/5/17');
-ShowVEpubDownload('2023/6/1 2023/5/17');
+ShowUpdbDownload('2025/6/1 2023/6/1 2023/5/17');
+ShowEpubDownload('2025/6/1 2023/6/1 2023/5/17');
+ShowVEpubDownload('2025/6/1 2023/6/1 2023/5/17');
 BookSectionEnd();
 ?>
 <img src="covers/1010490149.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Jose Chen整理製作，感謝chin223提供掃瞄檔。感謝Gilbert勘誤<br>
+好讀書櫃【典藏版】，感謝Jose Chen整理製作，感謝chin223提供掃瞄檔。感謝Gilbert、Kuo Liming勘誤<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -50,6 +50,161 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(Kuo Liming　2025/6/1)<br>
+孩董夭觴/孩童夭觴<br>
+manageria二andlords/managerial landlords<br>
+貪得無虜/貪婪無饜<br>
+山釐/山麓<br>
+無情於形形/鐘情於形形<br>
+燈聲/燈籠<br>
+會說/曾說<br>
+熠熠生輝/熠燈生輝<br>
+取水啜之磷磷/取水啜之，磷磷<br>
+興天為白/噀天為白<br>
+漣之/濾之<br>
+張聯方/張聯芳<br>
+盛讀/盛讚<br>
+積雪欲之/積雪欱之<br>
+小像船頭/小傒船頭<br>
+小溪/小傒<br>
+悽惻/淒惻<br>
+如蠅附，/如蠅附羶，<br>
+鞠拜客/鞠躬拜客<br>
+不得其二/不得其一言<br>
+開然以為/閧然以為<br>
+面禎/面赬<br>
+溪僮/傒僮<br>
+絕讚/絕少盛讚<br>
+朱雲峽/朱雲崍<br>
+攪雜/攙雜<br>
+一檻一屏/一檻一扉<br>
+垂髮髫小兒/垂髫小兒<br>
+教論/教諭<br>
+往調房師/往謁房師<br>
+區區進士/區區鼈進士<br>
+一人一事未嘗不得/一人一事，未嘗不得<br>
+︽醫榮丹方︾ 無不畢集/︽醫榮丹方︾ ，無不畢集<br>
+找人來讀給和他聽/找人來讀給他聽<br>
+以易勿關/以易勿閼<br>
+在一悄壁送下/在一峭壁之下<br>
+以石碟門/以石磥門<br>
+政不知從何處書也/政不知從何處著想也<br>
+大文出游/大父出游<br>
+能驚人以富貴/能驁人以富貴<br>
+祖父的心血但又尊敬/祖父的心血付諸東流，但又尊敬<br>
+彷復/彷彿<br>
+類盥/頮盥<br>
+小僕持香/小傒持香<br>
+錨銖必較/錙銖必較<br>
+︱定爐/︱白定爐<br>
+﹁資巨萬/﹁贏資巨萬<br>
+塗以丹漆︵雘︶三根為一架/塗以丹漆︵雘︶，三根為一架<br>
+蒲伏塔下/蒲伏堦下<br>
+沒有勢力的氣息/沒有勢利的氣息<br>
+龔以異錦/襲以異錦<br>
+親靈襯/親人靈襯<br>
+南鎮夢神求當地/南鎮夢神求夢。當地<br>
+紅塵世俗，顧影自憐/紅塵世俗，﹁顧影自憐<br>
+或寢或唯/或寢或吪<br>
+去世之對家/去世之後。對家<br>
+骨肉之感/骨肉之慼<br>
+性極編急/性極褊急<br>
+戶履常滿/戶屨常滿<br>
+怪石峰巉岏/怪石巉岏<br>
+日照之有錯/日照之有鋩<br>
+看煙火八外/看煙火煙火外<br>
+驅唱鑼鼓/謳唱鑼鼓<br>
+兩腳書櫥/兩腳書廚<br>
+。北張岱從/。張岱從<br>
+硜硜小懦/硜硜小儒<br>
+來自各地尤其是北方/來自各地︱︱尤其是北方<br>
+以楊為/以楊漣為<br>
+親信閣官/親信閹官<br>
+不怒遺一老/不憖遺一老<br>
+引發亂/引發動亂<br>
+漿瀚/漿澣<br>
+路費極止/路費輙止<br>
+一兩萬兩/一、兩萬兩<br>
+常蒸一猳/常蒸一豭<br>
+以數十人兒至/以數十人舁至<br>
+以非形毆其/以非刑毆其<br>
+過江不剩歡笑自若/過江不剩一尾，歡笑自若<br>
+用炭一簍以猛火/用炭一簍，以猛火<br>
+一且失卻/一旦失卻<br>
+宜銅爐/宣銅爐<br>
+調號/諢號<br>
+魚蝶輕舢/魚艓輕舢<br>
+軍器一架銳不可擋/軍器一架，銳不可擋<br>
+施旗/旌旗<br>
+廣擁/簇擁<br>
+、輿之旅/、轎輿之旅<br>
+太僕公車/太僕公事<br>
+逃出超興/逃出紹興<br>
+圭果/圭臬<br>
+在清關/在清入關<br>
+︱禎朝國史的/︱崇禎朝國史的<br>
+超興/紹興<br>
+、輿之旅/、轎輿之旅<br>
+骨納/胃納<br>
+恨史之不眩也/恨史之不賅也<br>
+登陣死守/登陴死守<br>
+歸即鼓發/歸即發<br>
+臨情/臨清<br>
+剛狼/剛狠<br>
+飲色危襟/歛色危襟<br>
+揣慶摩時務/揣摩時務<br>
+﹁先殺後聞﹂張岱/﹁先殺後聞﹂。張岱<br>
+不敢杯箸/不敢奉上杯箸<br>
+橄縣官/檄縣官<br>
+年輕人的粉/年輕伶人的粉<br>
+如寫照消其半/如寫照肖其半<br>
+如料魚舉其大/如網魚舉其大<br>
+安照度過/安然度過<br>
+背痛後直/背痛後來一直<br>
+怎麼嚴重/怎麼這麼嚴重<br>
+﹁譬猶逐鹿﹂是許多/﹁譬猶逐鹿﹂，是許多<br>
+〇二年篡位/〇二年永樂篡位<br>
+洞察力的神韻張岱認為/洞察力的神韻︱︱張岱認為<br>
+見傻人/見後人<br>
+忠勇之士由於/忠勇之士。由於<br>
+尚仕撰寫/尚在撰寫<br>
+醒後思/醒後佇思<br>
+邊往紹興/遷往紹興<br>
+猶風動/猶藉風動<br>
+歷心豐富/歷之豐富<br>
+是啊相當/是齣相當<br>
+的層封鎖/的層層封鎖<br>
+年踏七十/年躋七十<br>
+切性。誠如張岱﹁睿/切性。誠如張岱說魯王觀戲時﹁睿<br>
+見開/見聞<br>
+以糲報帳/以糲報粻<br>
+惠寄一像﹂雖/惠寄一像﹂，雖<br>
+祿草藤蘿/襍草藤蘿<br>
+其執簡之/其執簡俟之<br>
+慣於正德/橫於正德<br>
+舊役小溪/舊役小傒<br>
+確繫/確鑿<br>
+摸燈蛾/撲燈之蛾<br>
+燈自見/妍媸自見<br>
+米在困稟中/米在囷廩中<br>
+既不能死/既不能覓死<br>
+他落自己/他一一數落自己<br>
+張長公之。/張長公之壙。<br>
+異日糧再訪/異日裹糧再訪<br>
+愧我影/愧衾影<br>
+不盥不澈/不盥不潄<br>
+流寇麋起/流寇麇起<br>
+至於大河，則能往北行/至於大河，則能續往北行<br>
+曰﹁瑯嬛福地﹂旁為/曰﹁瑯嬛福地﹂。旁為<br>
+｢向以韋/﹁向以韋<br>
+西學雖精而法以人/西學雖精，而法以人<br>
+忠勇之士由於張/忠勇之士。由於張<br>
+則可矣｣/則可矣﹂<br>
+凡事婚傷/凡事火辱傝 #𤍇<br>
+沙作金黃色/沙作紫金色 #原書為沙作金黃色, 但對照"海志"出處(瑯嬛文集卷二)，應為沙作紫金色<br>
+滓嚓/𧾷宰𨆾 # 缺字<br>
+史范/史范(上范下土) #𡎊<br>
+<br>
 (Gilbert 2023/6/1)<br>
 ∣∣/︱︱（共七十七處）<br>
 會督孩子/會督促孩子<br>
