--- a/html/Share/1010490718.html
+++ b/html/Share/1010490718.html
@@ -28,7 +28,7 @@ BookSectionEnd();
 <button onclick="window.location.href='https://haodoo.org/?product=1010490718'">從好讀二代下載 EPUB 檔</button> 2025/6/23<br><br>
 <div class="covers"><img src="covers/1010490718.jpg" HSPACE=8 align=right></div>
 
-好讀書櫃【典藏版】，感謝順麟整理製作，感謝Nostradamus提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝sue1289整理製作，感謝IT提供掃瞄檔。<br>
 <br>
 <br>
 <strong>本書簡介：</strong><br>
