Uploaded book metadata 1010490760 thru 1010490769

--- a/html/Share/1010490757.html
+++ b/html/Share/1010490757.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("陳映真主編【諾貝爾文學獎全集１８：】");
+SetTitle("陳映真主編【諾貝爾文學獎全集１８：布登勃魯克家族】");
 SetLink('<a href="?M=hd&P=fiction-5">小說園地 書目</a>');
 </script>
 <style>
@@ -15,7 +15,7 @@ SetLink('<a href="?M=hd&P=fiction-5">小說園地 書目</a>');
 <?php
 require_once('show-book.php');
 $author = '陳映真主編';
-$title = '諾貝爾文學獎全集１８：';
+$title = '諾貝爾文學獎全集１８：布登勃魯克家族';
 $book = 'P1010490757';
 BookSectionBegin();
 #ShowBookTitleOnly();
