Uploaded metadata 1010490770 thru 1010490775

--- a/html/book/257.html
+++ b/html/book/257.html
@@ -11,7 +11,8 @@ BookSectionBegin();
 $author = '金庸';
 $title = '袁崇煥評傳'; 
 $book = 'D257';
-ShowPdbBookTitle() ;
+ShowBookTitleOnly();
+# ShowPdbBookTitle() ;
 ShowPdbDownload('2003/8/8 (149K) ');
 BookSectionEnd();
 ?>
