Updated EPUB link 1010490670 thru 1010490679

--- a/html/Share/1010490673.html
+++ b/html/Share/1010490673.html
@@ -21,10 +21,10 @@ BookSectionBegin();
 ShowBookTitleOnly();
 # ShowBookTitle();
 # ShowUpdbDownload('2025/5/26');
-ShowEpubDownload('2025/5/26');
-ShowVEpubDownload('2025/5/26');
+# ShowEpubDownload('2025/5/26');
+# ShowVEpubDownload('2025/5/26');
 BookSectionEnd();
-?>
+?><button onclick="window.location.href='https://haodoo.org/?product=1010490673'">從好讀二代下載 EPUB 檔</button> 2025/5/26<br><br>
 <div class="covers"><img src="covers/1010490673.jpg" HSPACE=8 align=right></div>
 
 好讀書櫃【典藏版】，感謝Carol整理製作，感謝chin223提供掃瞄檔。<br>
