Updated typos in 1010490713 and 1010490764

--- a/html/Share/1010490713.html
+++ b/html/Share/1010490713.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("陳映真主編【諾貝爾文學獎全集２４：艾略特詩及文學評論選】");
+SetTitle("陳映真主編【諾貝爾文學獎全集２４：G．米斯特拉爾詩選】");
 SetLink('<a href="?M=hd&P=fiction-5">小說園地 書目</a>');
 </script>
 <style>
@@ -15,7 +15,7 @@ SetLink('<a href="?M=hd&P=fiction-5">小說園地 書目</a>');
 <?php
 require_once('show-book.php');
 $author = '陳映真主編';
-$title = '諾貝爾文學獎全集２４：艾略特詩及文學評論選';
+$title = '諾貝爾文學獎全集２４：G．米斯特拉爾詩選';
 $book = 'P1010490713';
 BookSectionBegin();
 #ShowBookTitleOnly();
