--- a/html/Share/1010490764.html
+++ b/html/Share/1010490764.html
@@ -38,6 +38,7 @@ BookSectionEnd();
 得獎評語：「我們頒獎給他，是因為他優秀的敘述技巧在『富賽特世家』中發揮淋漓盡致。」<br>
 <br>
 附圖：第一部第二卷的五線譜<br>
+<img src="covers/1010490764a.jpg">
 <br>
 <br>
 <strong>作者簡介：</strong><br>
