--- a/html/book/audioAB014.html
+++ b/html/book/audioAB014.html
@@ -9,11 +9,11 @@ require_once('player.php');
 
 PlayMP3('AB014-01', '第一章《紙生極樂塔》(上)劉小珍錄音 2025/6/7');
 PlayMP3('AB014-02', '第一章《紙生極樂塔》(下)劉小珍錄音 2025/6/14');
+PlayMP3('AB014-03', '第二章《血染少師劍》劉小珍錄音 2025/6/21');
 
 ?>
 
 <!--
-PlayMP3('AB014-03', '第二章《》劉小珍錄音 2025/6/21');
 PlayMP3('AB014-04', '第三章《》劉小珍錄音 2025/6/28');
 PlayMP3('AB014-05', '第四章《》劉小珍錄音 2025/7/5');
 -->
