--- a/html/book/audioAB012.html
+++ b/html/book/audioAB012.html
@@ -20,6 +20,7 @@ PlayMP3('AB012-10', '10《診斷面臨的兩難》景梅錄音 2025/5/31');
 PlayMP3('AB012-11', '11+12《衰弱症+善終不易》景梅錄音 2025/6/7');
 PlayMP3('AB012-12', '13《生前預囑》景梅錄音 2025/6/14');
 PlayMP3('AB012-13', '14+15《學會放手+無效醫療》景梅錄音 2025/6/21');
+PlayMP3('AB012-14', '16+17《加護醫學-人生終點的起站+敲開天堂的門》景梅錄音 2025/6/28');
 
 ?>
 
