Uploaded AB007 part 40 and AB015 part 01

--- a/html/Share/1010490157.html
+++ b/html/Share/1010490157.html
@@ -12,8 +12,8 @@ $title = '會騙人的數字—統計學的迷思';
 $book = 'P1010490157';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/5/5');
-ShowEpubDownload('2023/5/5');
+ShowUpdbDownload('2025/6/30 2023/5/5');
+ShowEpubDownload('2025/6/30 2023/5/5');
 BookSectionEnd();
 ?>
 <img src="covers/1010490157.jpg" HSPACE=8 align=right>
@@ -75,6 +75,21 @@ Hans-Hermann Dubben、Hans-Peter Beck-Bornholdt（Umberto Eco）<br>
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(Kuo Liming 2025/6/30)<br>
+論丈/論文<br>
+懐孕/懷孕<br>
+、圍大小/、範圍大小<br>
+投率/輕率<br>
+地減/地刪減<br>
+選拝/選擇<br>
+氣候暧化/氣候暖化<br>
+時侯/時候 #原書別字<br>
+計晝/計畫<br>
+有關出版偏差的文裡/有關出版偏差的文獻裡<br>
+預洲/預測<br>
+不曾先後/不管先後<br>
+岀現/出現<br>
+<br>
 (製作讀友 2023/5/5)<br>
 劃條線/畫條線<br>
 劃線/畫線<br>
