--- a/html/book/83.html
+++ b/html/book/83.html
@@ -1,39 +1,39 @@
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
 <tr><td>
-<font color="CC0000">朱邦復</font>《宇宙浪子一》<a href="https://haodooclassic.net/PDB/G/83a.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子一》<a href="https://haodoo.net/PDB/G/83a.pdb">[下載]</a>
  2002/6/10 (223K) 
 <br>
-<font color="CC0000">朱邦復</font>《宇宙浪子二》<a href="https://haodooclassic.net/PDB/G/83b.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子二》<a href="https://haodoo.net/PDB/G/83b.pdb">[下載]</a>
  2002/6/10 (227K) 
 <br>
-<font color="CC0000">朱邦復</font>《宇宙浪子三》<a href="https://haodooclassic.net/PDB/G/83c.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子三》<a href="https://haodoo.net/PDB/G/83c.pdb">[下載]</a>
  2002/6/10 (231K) 
 <br>
-<font color="CC0000">朱邦復</font>《宇宙浪子四》<a href="https://haodooclassic.net/PDB/G/83d.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子四》<a href="https://haodoo.net/PDB/G/83d.pdb">[下載]</a>
  2002/6/10 (236K) 
 <br>
-<font color="CC0000">朱邦復</font>《宇宙浪子五》<a href="https://haodooclassic.net/PDB/G/83e.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子五》<a href="https://haodoo.net/PDB/G/83e.pdb">[下載]</a>
  2002/6/10 (241K) 
 <br>
-<font color="CC0000">朱邦復</font>《宇宙浪子六》<a href="https://haodooclassic.net/PDB/G/83f.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子六》<a href="https://haodoo.net/PDB/G/83f.pdb">[下載]</a>
  2002/6/10 (255K) 
 <br>
-<font color="CC0000">朱邦復</font>《宇宙浪子七》<a href="https://haodooclassic.net/PDB/G/83g.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子七》<a href="https://haodoo.net/PDB/G/83g.pdb">[下載]</a>
  2002/6/10 (245K) 
 <br>
-<font color="CC0000">朱邦復</font>《宇宙浪子八》<a href="https://haodooclassic.net/PDB/G/83h.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子八》<a href="https://haodoo.net/PDB/G/83h.pdb">[下載]</a>
  2002/6/10 (212K) 
 <br>
-<font color="CC0000">朱邦復</font>《宇宙浪子九》<a href="https://haodooclassic.net/PDB/G/83i.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子九》<a href="https://haodoo.net/PDB/G/83i.pdb">[下載]</a>
  2002/6/10 (205K) 
 <br>
-<font color="CC0000">朱邦復</font>《宇宙浪子十》<a href="https://haodooclassic.net/PDB/G/83j.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子十》<a href="https://haodoo.net/PDB/G/83j.pdb">[下載]</a>
  2002/6/10 (216K) 
 <br>
-<font color="CC0000">朱邦復</font>《宇宙浪子十一》<a href="https://haodooclassic.net/PDB/G/83k.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子十一》<a href="https://haodoo.net/PDB/G/83k.pdb">[下載]</a>
  2002/6/10 (221K)
 <br>
-<font color="CC0000">朱邦復</font>《宇宙浪子十二》<a href="https://haodooclassic.net/PDB/G/83l.pdb">[下載]</a>
+<font color="CC0000">朱邦復</font>《宇宙浪子十二》<a href="https://haodoo.net/PDB/G/83l.pdb">[下載]</a>
  2002/6/10 (250K) 
 <br>
 <br>
