Uploaded audiobooks AB015 & AB016. Revised book 13H8

--- a/html/book/13H8.html
+++ b/html/book/13H8.html
@@ -15,16 +15,325 @@ ShowBookTitle() ;
 ShowUpdbDownload('2013/9/13 (138K) 2013/10/11');
 ShowPdbDownload('2013/9/13 (134K) 2013/10/11');
 ShowPrcDownload('2013/9/13 (140K) 2013/10/11');
-ShowEpubDownload('2013/9/13 (101K) 2013/10/11');
-ShowVEpubDownload('2013/9/13 (101K) 2013/10/11');
+ShowEpubDownload('2025/9/5 (309K) 2013/10/11 2013/9/13');
+ShowVEpubDownload('2025/9/5 (309K) 2013/10/11 2013/9/13');
 BookSectionEnd();
 ?>
+<img src="covers/13H8.jpg" HSPACE=8 align=right>
 好讀書櫃《典藏版》，感謝邱應琦參照原書整理校正過。感謝A Yung勘誤。<br>
 <br>
 這個少年，為了一個女孩，竟然與人槍戰！而連串怪事，顯影的「鬼竹」；死裡逃生的離奇意外；師父、香媽和況將軍的糾結關係，更在他的好奇與聰明下，釐出驚人真相！！這個少年就是衛斯理！<br>
 <br>
 <font size=2>
 勘誤表：<br>
+(小瑜2025/9/5)<br>
+按明窗2022.07初版勘誤<br>
+新增：〈新之又新的序言，最新的〉、〈幾句話〉、〈序言〉<br>
+內文 ：全書照原文更改, 按原書更改段落, 按原書更改標點符號 (多處)<br>
+着(原書)/著 (多處)<br>
+裏(原書)/裡 (多處)<br>
+這只小藤箱，/這隻小藤箱，<br>
+一個西文字/一個英文字<br>
+有一個表示對、正確的符號：「Ｖ」。/有一個表示「對」、「正確」的符號：Ｖ。<br>
+這小紙片/這張小紙片<br>
+也薄有微名，/也薄有名氣，<br>
+必須有相當/必須要有相當<br>
+一隻手掌大的/一隻手掌般大的<br>
+癩蝦蟆/癩蛤蟆 (多處/按原書)<br>
+灰白色，/灰白色的，<br>
+，是學校/，父親是學校<br>
+我一看他挾住了/我一看到他夾住了<br>
+伸手按在放在桌上的一只藤書包之上。/伸手按在一隻放在桌上的藤書包之上。<br>
+想更進一步/想作更進一步<br>
+甚麼/什麼 (多處/按原書)<br>
+她黑白分明/她那黑白分明<br>
+蝎子/蠍子 (多處/按原書)<br>
+向它刺了一下/向牠刺了一下<br>
+「拍」地/「啪」地<br>
+本來是灰白色/本來灰白色<br>
+所有的男女同學/所有男女同學<br>
+他聲音有點/他的聲音有點<br>
+死蝦蟆/死蛤蟆<br>
+用樹枝挾了它，/用樹枝夾起了牠，<br>
+狼狽奔出/狼狽地奔出<br>
+片很平靜的/用很平靜的<br>
+從小看弄慣了，/從小看慣了，<br>
+它們特別/牠們特別<br>
+，是不是可以早退？」/，可不可以早退？」<br>
+可是我都也沒有勇氣/可是我都沒有勇氣<br>
+也知道一定面紅心熱/也知道自己一定面紅耳熱<br>
+越/愈 (多處/按原書)<br>
+就越是喜歡看/就愈喜歡看<br>
+我才偷偷地看/我才偷偷看<br>
+在接下來的時間之中，/接下來的時間，<br>
+續續，聽/續續地，聽<br>
+人類的渣滓/人類渣滓<br>
+神思恍惚/精神恍惚<br>
+傚法(原書)/效法<br>
+在老師講到這裡時/老師講到這裡時，<br>
+我先深深地吸了一口氣，/我先深深吸了一口氣，<br>
+衣袂微揚/衣袖微揚<br>
+一等到看到了她/等看到了她<br>
+各色人等/各式人等<br>
+一面在啞著聲叫/一面啞著嗓音叫<br>
+驚怖莫名，面肉扭曲，叫聲愈來愈是凄厲，/驚恐莫名，面容扭曲，叫聲愈來愈凄厲，<br>
+奸團的又一次成功/奸團又一次的成功<br>
+那只一下子/那隻一下子<br>
+全班人都聽得/全班都聽得<br>
+我在說的時候/我說的時候<br>
+的符號「Ｖ」。/的符號：Ｖ。<br>
+「鋤奸」的這天/「鋤奸」的那天<br>
+那個字的中/這個字的中<br>
+蝎毒/蠍毒<br>
+表示我已明白了她的秘密/表示我已知道了她的秘密<br>
+相投那一剎間所交流的訊息/相投那一剎那所交流的信息<br>
+「鳥類和龜、蛇類的卵。」/鳥類、蛇和龜類的卵。<br>
+這樣的錯失/這樣的錯誤<br>
+株/棵 (多處/按原書)<br>
+顆泥丸，一隻棗木/顆泥丸和一隻棗木<br>
+它們的身下/牠們的身下<br>
+七八枚鵲/七八隻鵲<br>
+那一剎間/那一剎那 (2處)<br>
+後拉的大力/後拉的力量<br>
+雙手又一起抓住了/雙手又抓住了<br>
+忽然冒出來了/忽然冒出了<br>
+一陣驚懼/一陣驚恐<br>
+如何叫我不吃驚？/這叫我如何不吃驚？<br>
+像是一月，/像是一個月，<br>
+駛出城去。/駛出城外去。<br>
+全軍覆滅。/全軍覆沒。<br>
+志願來，他/志願來時，他<br>
+捂住了我的口/捂住我的口<br>
+武術的訓過程十分嚴格，缺一天會/武術訓練的過程十分嚴格，缺席一天，會<br>
+已穩穩坐/已穩坐<br>
+聽到一個人在啞著聲問/聽到一個人在啞著嗓音問<br>
+兩柄鑰匙/兩把鑰匙<br>
+一柄七八吋長/一把七八寸長<br>
+去做了堅固無比(原書錯誤)/去造了堅固無比<br>
+騎兵大隊被滅之後，只有兩個兵漏網，/騎兵大隊被滅之後，只有兩個漏網兵，<br>
+兩個漏網人/兩個漏網之人<br>
+我的眼光有時，甚至相當大膽。/我的目光，有時甚至相當大膽。<br>
+我的眼光，/我的目光，<br>
+牙簽/牙籤<br>
+我取起了其中的一大半，/我拿起了其中的一大半，<br>
+起來？只是由於/起來？那只是由於<br>
+我的身體中擴大/我的體內中擴大<br>
+眼瞼/眼簾 (3處)<br>
+抓住了手臂，/抓住手臂，<br>
+一直想起來就發抖，/一想起來就發抖，<br>
+我嘆一聲，/我嘆了一聲，<br>
+屋後的圍牆中翻進去/屋後的圍牆翻進去<br>
+家中的長輩，/家中長輩，<br>
+不了多少的，才/大不了多少，才<br>
+簡直事先絕無法料得到。/簡直事先絕無法料到。<br>
+師父一轉過身，/師父一轉身，<br>
+扶著樹喘氣。/扶著樹幹喘氣。<br>
+十分迷惘的光彩/十分迷惘的光采<br>
+只記得又推開/只記得再推開<br>
+所以我也不出聲。/所以我也不作聲。<br>
+又過了好一會，/又過了好一會兒，<br>
+他怔怔站在竹前/他怔怔地站在竹前<br>
+抓住了一根一握粗細的竹子，/抓住了一根幼細的竹子<br>
+怎麼運動，那根竹子，竟叫他抓得格格斷裂！/怎麼運勁，那根竹子，竟被他抓得「格格」斷裂！<br>
+我第一次見他，/我第一次見他時，<br>
+更奇的，是全家上下，/。更奇的是，全家上下，<br>
+和我同年齡的孩子/和我同齡的孩子<br>
+　　對於這樣/　　我對於這樣<br>
+他目光空洞，向著我，/他目光空空地望著我<br>
+十分嚴厲地告誡，/十分嚴厲地告誡過我：<br>
+這才回了家中，/這才回家，<br>
+雙方都覺不出/雙方都察覺不出<br>
+和她柔軟的、潤濕的/和她柔軟、潤濕的<br>
+她一直偎在我的懷內/她一直依偎在我的懷內<br>
+可是我堅決搖頭/可是我堅決地搖頭<br>
+門推開，/門被推開，<br>
+聲音有點啞：/嗓音有點啞：<br>
+祝香香才又在學校出現/祝香香這才又在學校出現<br>
+她又幽幽歎了一聲，/她又幽幽地歎了一聲，<br>
+俏臉飛紅/俏臉緋紅<br>
+感覺如此真實/感覺是如此真實<br>
+他就是說(原書錯誤)/就是說<br>
+年紀小，吸收能力大；年紀大，吸收能力小。/年紀小，吸收能力強；年紀大，吸收能力弱。<br>
+包括了外星人在內/包括外星人在<br>
+蛛絲馬迹(原書)/蛛絲馬跡<br>
+神秘面幕/神秘面目<br>
+竹榦截下/竹幹截下<br>
+這宗苦差/這種苦差<br>
+跟在堂叔的後面走/跟在堂叔後面走<br>
+只好算是大兒童/只算是大兒童<br>
+大人都根本不/大人根本不<br>
+輕輕易易挑了起來/輕輕易易就挑了起來<br>
+聲音又啞/嗓音又啞<br>
+在竹筒也似的竹子/在竹筒似的竹子<br>
+我還不相信哩/我還不相信呢<br>
+他說著，眼望/他說時，眼望<br>
+啞白色，/啞白色的，<br>
+完成了小學課/完成小學課<br>
+，向以常識豐富/，一向以常識豐富<br>
+我聽得他們/我聽到他們<br>
+一顆印章，刻的是/一枚印章，別的是<br>
+作品已是遠近馳名/作品已遠近馳名<br>
+一個奇材/一個奇才<br>
+便會興歎/便會輕嘆<br>
+不可避免/無可避免<br>
+痴痴地思念的/癡癡思念的 (按原書)<br>
+長嗟短歎/長嗟短嘆<br>
+忍得住狂笑/忍得著狂笑<br>
+雙眼怒突/雙眼怒凸<br>
+那令得我再/那令到我再<br>
+方大口喘氣/方才大口喘氣<br>
+害怕了起來/害怕起來<br>
+擊掌為誓/擊掌為盟<br>
+抵銷嚴寒/抵消嚴寒<br>
+都在雙臂之內/都在我的雙臂之內<br>
+它實在/牠實在<br>
+聽來平靜/聽起來平靜<br>
+一定的理，/一定的理由，<br>
+吐露秘密/透露秘密<br>
+一口氣說下去的，/一口氣說下去，<br>
+臉色發白/面色發白<br>
+看來更增神秘感/看來更添神秘感<br>
+我在看到他左右/我看到他左右<br>
+兩柄手槍/兩支手槍<br>
+三十六計，走為上策/三十六著，走為上著<br>
+大踏步向前來。/大踏步向前走來。<br>
+那人反倒是首領/那人反正是首領<br>
+祝香香聽得我的叫喚/祝香香聽到我的叫喚<br>
+立時掣了另一柄槍在手/立時拿了另一支槍在手<br>
+什麼也不做。/什麼也不做了。<br>
+凶狠/兇狠<br>
+在那枝/在那棵<br>
+不由自主的發抖/不由自主地發抖<br>
+也感不出火的威力/也感受不出火的威力<br>
+這使我知道何以這種雲/這使我明白到何以這種雲<br>
+令得我全身/令我全身<br>
+同時有柔和/同時有把柔和<br>
+毫無疑問，/毫無疑問地，<br>
+佻皮/調皮<br>
+由衷和誠意/由衷和誠懇<br>
+那裡風/那裡的風<br>
+根本就是一個人/根本就是同一個人<br>
+低歎/低嘆<br>
+國家遭難/國家有難<br>
+傚古人(原書)/效古人<br>
+自己的名字，有百分之八十四/自己的名字百分之八十四<br>
+，如起來，/，合起來，<br>
+自然會往後說/原因自然會在後面說<br>
+一雙好朋友/一對好朋友<br>
+并肩/並肩 (2處)<br>
+腰挎雙槍/腰配雙槍<br>
+不覺得什麼/不覺得有什麼<br>
+我的家族中很出了些人才/我的家族中出了好些人才<br>
+香香也聽得你親口答應了的/香香也聽到你親口答應了的<br>
+歎了一聲/嘆了一聲<br>
+一枚雞蛋/一隻雞蛋<br>
+都是拿生命在開玩笑/都是拿生命開玩笑<br>
+我對這種玄妙的/我對於這種玄妙的<br>
+：「寧願死/：「我寧願死<br>
+盛宴方罷/盛宴所在<br>
+那簡直反常/那簡直是反常<br>
+一個雞蛋/一隻雞蛋<br>
+拿著兩柄槍，過來請大眼神先選，大眼神隨便揀了一柄。/拿著兩支槍過來請大眼神先選，大眼神隨便揀了一支。<br>
+兩柄槍由於/兩支槍由於<br>
+「文比」/「武比」<br>
+雖然行動語談之中/雖然行動言談之中<br>
+雖然器宇軒昂地/雖然我氣宇軒昂<br>
+直到雙雙仆倒在地/直到雙雙撲倒在地<br>
+一臉的驚恐/一臉驚恐<br>
+頭臉上沾滿了蛋白蛋黃/頭上臉上都沾滿了蛋白蛋黃<br>
+兩架摩托車/兩輛摩托車<br>
+頭臉/頭和臉<br>
+這麼凶/這麼兇<br>
+聲音十分膽怯/聲音卻十分膽怯<br>
+那只臉盆上/那隻臉盆上<br>
+「光啷」/「噹啷」<br>
+氣勢很凶/氣勢很兇<br>
+都源於有這次經歷/都源於這次經歷<br>
+會不會我受了/會不會是我受了<br>
+張皇失措/驚惶失措<br>
+白色的光影/白色的光景<br>
+螢光幕/螢光屏 (按原書)<br>
+那幅光影中，/那幅光景中，<br>
+我清楚地可以/我清楚可以<br>
+一點不神秘/一點也不神秘<br>
+玩耍很多/玩意很多<br>
+可是他顯然聽不見/可是他顯然聽不到<br>
+置身於一個惡夢之中/置身於惡夢之中<br>
+他的形象也模糊。/他的形象也模糊了。<br>
+魂牽夢繫(原書錯誤)/魂牽夢縈 (2處)<br>
+初吻，和在/初吻，在<br>
+能遇那麼多/能遇到那麼多<br>
+絕非少年/決非少年<br>
+濃眉緊蹙/濃眉緊皺<br>
+和緩地問/緩和地問<br>
+況將軍沉聲：/況將軍沉聲道：<br>
+負岌/負笈<br>
+專門名詞/專有名詞<br>
+登時鴉雀無聲/頓時鴉雀無聲<br>
+車廂的頂/車廂頂<br>
+雜碎，/雜種， (3處)<br>
+失聲叫了起來/尖聲叫了起來<br>
+令得況將軍/令況將軍<br>
+驚擾了百姓/驚擾老百姓<br>
+所想的形象/所想的影像<br>
+迹象(原書)/跡象<br>
+一個人的形像/一個人的影像<br>
+不由自主喘著氣/不由自主地喘著氣<br>
+不致於/不至於<br>
+你仍然是唯一的一個一下子/你仍然是唯一一個一下子<br>
+訊號/信號 (按原書) (2處)<br>
+祝英豪(原書錯誤)/況英豪<br>
+我正想他/我正在想他<br>
+自己變白痴/自己變成白癡<br>
+也真的過了份/也真的過了分 (按原書)<br>
+師父又並不/師父並不<br>
+她一手接住心口(原書錯誤)/她一手按住心口<br>
+少年人看起來/少年人看來<br>
+深切，喃喃地道/深切，她喃喃地道<br>
+大著膽子試探著問：/大著膽子試探問：<br>
+大具憤意/大具怒意<br>
+至多只能說/最多只能說<br>
+事先絕意想/事先絕對意想<br>
+現出猶豫，但是又堅決/現出猶豫但堅決<br>
+我準備告訴你/我正準備告訴你<br>
+全是竹子製造的，/全是竹子製的，<br>
+竹家俬/竹家具<br>
+簡直像是在痛苦/簡直像在痛苦<br>
+有什麼說話/有什麼話說<br>
+衝出了屋子去/衝出了屋外去<br>
+不明就裡/不明究裡<br>
+三人在略作安排之後/三人略作安排之後<br>
+張三丰/張三豐<br>
+人各有性格不同/人各有不同性格<br>
+看透了性情/看透了世情<br>
+白痴/白癡<br>
+由於下定決心/由於下定了決心<br>
+沒有信息之後/沒有音訊之後<br>
+一顆釘子/一口釘子<br>
+這顆釘子/這口釘子<br>
+青年聯在一起/青年聯繫在一起<br>
+已經理出了一點頭緒來了/已經理出一點頭緒來了<br>
+男性同性戀者/男同性戀者<br>
+一見之後/一見面之後<br>
+伸雙手拔出了雙刃/伸雙手拔出了雙刀<br>
+返身揚刀/翻身揚刀<br>
+疾逾閃電/疾如閃電<br>
+稍慢得一慢/稍慢一步<br>
+宣瑛受創/宣瑛受傷<br>
+立刻甜甜她笑了起來/立刻甜甜地笑了起來<br>
+竟偎在祝志強的身邊/竟依在祝志強的身邊<br>
+轟轟發發，她明白/轟轟烈烈，使她明白<br>
+也聽出/也聽得出<br>
+可是也形成一股一股暗湧/可是也形成一股暗湧<br>
+馬夫/馬伕 (多處)<br>
+那麼就會影響軍心了/那就會影響軍心了<br>
+敵軍的團部/敵軍的總部<br>
+以致又在/以至又在<br>
+香媽卻反對/宣瑛卻反對<br>
+香香也想到有/香香也沒想到<br>
+香媽皺著眉，同我望來，/香媽蹙著眉，向我望來，<br>
+垂瞼不語/垂頭不語<br>
+<br>
 (A Yung  2013/10/11)<br>
 痢蝦蟆/&#151019;蝦蟆 <font color=#0066CC>(改成癩蝦蟆)</font><br>
 癩蝦蟆/瘌蝦蟆 <font color=#0066CC>(未改，原正確。)</font><br>
