--- a/html/book/audioAB015.html
+++ b/html/book/audioAB015.html
@@ -12,6 +12,7 @@ PlayMP3('AB015-02', '第二章《聆秘》劉小珍錄音 2025/7/26');
 PlayMP3('AB015-03', '第三章《救難》劉小珍錄音 2025/8/9');
 PlayMP3('AB015-04', '第四章《坐鬥》劉小珍錄音 2025/8/23');
 PlayMP3('AB015-05', '第五章《治傷》劉小珍錄音 2025/8/30');
+PlayMP3('AB015-06', '第六章《洗手》劉小珍錄音 2025/9/6');
 
 ?>
 
