--- a/html/book/audioAB016.html
+++ b/html/book/audioAB016.html
@@ -12,6 +12,7 @@ PlayMP3('AB016-02', '《二》景梅錄音 2025/8/16');
 PlayMP3('AB016-03', '《三》景梅錄音 2025/8/23');
 PlayMP3('AB016-04', '《四》景梅錄音 2025/8/30');
 PlayMP3('AB016-05', '《五》景梅錄音 2025/9/6');
+PlayMP3('AB016-06', '《六》景梅錄音 2025/9/13');
 
 ?>
 
