--- a/html/book/audioAB016.html
+++ b/html/book/audioAB016.html
@@ -14,6 +14,8 @@ PlayMP3('AB016-04', '《四》景梅錄音 2025/8/30');
 PlayMP3('AB016-05', '《五》景梅錄音 2025/9/6');
 PlayMP3('AB016-06', '《六》景梅錄音 2025/9/13');
 PlayMP3('AB016-07', '《七》景梅錄音 2025/9/20');
+PlayMP3('AB016-08', '《八》景梅錄音 2025/9/27');
+PlayMP3('AB016-09', '《九》景梅錄音 2025/10/4');
 
 ?>
 
