--- a/html/book/audioAB015.html
+++ b/html/book/audioAB015.html
@@ -18,6 +18,7 @@ PlayMP3('AB015-08', '第八章《面壁》劉小珍錄音 2025/9/27');
 PlayMP3('AB015-09', '第九章《邀客》劉小珍錄音 2025/10/4');
 PlayMP3('AB015-10', '第十章《傳劍》劉小珍錄音 2025/10/11');
 PlayMP3('AB015-11', '第十一章《聚氣》劉小珍錄音 2025/10/25');
+PlayMP3('AB015-12', '第十二章《圍攻》劉小珍錄音 2025/11/8');
 
 ?>
 
